Force field not affecting rigid body simulation #58991

Closed
opened 2018-12-08 01:59:16 +01:00 by Lucas Boutrot · 24 comments

System Information
Operating system: Windoxs 10
Graphics card: GeForce GTX 1060

Blender Version
Broken: 2.80, 6a4e8096973, blender2.8, 2015-12-07 18.28
Worked: 2.79

Short description of error
Adding a force field to a rigid body simulation does not change anything.

Exact steps for others to reproduce the error

  • Quick rigid body setup with a sphere falling on a plane
  • Add a "Force" force field
  • Start the simulation
**System Information** Operating system: Windoxs 10 Graphics card: GeForce GTX 1060 **Blender Version** Broken: 2.80, 6a4e8096973, blender2.8, 2015-12-07 18.28 Worked: 2.79 **Short description of error** Adding a force field to a rigid body simulation does not change anything. **Exact steps for others to reproduce the error** - Quick rigid body setup with a sphere falling on a plane - Add a "Force" force field - Start the simulation

#64493 was marked as duplicate of this issue

#64493 was marked as duplicate of this issue

#59135 was marked as duplicate of this issue

#59135 was marked as duplicate of this issue
Author

Added subscriber: @thornydre

Added subscriber: @thornydre

Added subscriber: @StephenSwaney

Added subscriber: @StephenSwaney

Please attach a .blend showing the problem.

Please attach a .blend showing the problem.
Author

Sorry about that, here is a file for 2.80:
rigi_body_2_80.blend

And the same file working in 2.79:
rigi_body_2_79.blend

Sorry about that, here is a file for 2.80: [rigi_body_2_80.blend](https://archive.blender.org/developer/F5888449/rigi_body_2_80.blend) And the same file working in 2.79: [rigi_body_2_79.blend](https://archive.blender.org/developer/F5888448/rigi_body_2_79.blend)

Thank you!

Thank you!
Sergej Reich was assigned by Sebastian Parborg 2018-12-10 14:44:36 +01:00

Added subscriber: @Cyclic51

Added subscriber: @Cyclic51

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey

Ok, I fixed part of this in 5cc015f0ad.
However there's another regression. Changes to force fields don't mark the rigid body cache as outdated (the PTCACHE_OUTDATED flag needs to be set).
I don't think I have time to figure out how the depsgraph works to add the proper relations for that, so I think either @Sergey or @mont29 should take a look.

Ok, I fixed part of this in 5cc015f0ad05. However there's another regression. Changes to force fields don't mark the rigid body cache as outdated (the PTCACHE_OUTDATED flag needs to be set). I don't think I have time to figure out how the depsgraph works to add the proper relations for that, so I think either @Sergey or @mont29 should take a look.
Sergej Reich removed their assignment 2018-12-18 18:30:09 +01:00

Added subscriber: @sreich

Added subscriber: @sreich
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

@sreich, is this still an issue?

@sreich, is this still an issue?

I can not reproduce the issue, behavior seems to be the same in 2.79 and current master.
There was a of fixes done in the area, so probably got fixed as a part of another issue?

I can not reproduce the issue, behavior seems to be the same in 2.79 and current master. There was a of fixes done in the area, so probably got fixed as a part of another issue?

As I mentioned there is a second regression here, in that changes to the force field don't invalidate rigid body cache.
Simple way to reproduce:

  1. Add a rigid body.
  2. Add a force field.
  3. Simulate a few frames.
  4. Change force field strength and see that the rigid body cache hasn't been invalidated.
As I mentioned there is a second regression here, in that changes to the force field don't invalidate rigid body cache. Simple way to reproduce: 1. Add a rigid body. 2. Add a force field. 3. Simulate a few frames. 4. Change force field strength and see that the rigid body cache hasn't been invalidated.
Added subscribers: @mushroomeo, @christopher.burns, @Ekiwnox, @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-06-11 17:27:47 +02:00

Added subscriber: @a.monti

Added subscriber: @a.monti

This comment was removed by @a.monti

*This comment was removed by @a.monti*
Author

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

This task seems to be resolved

This task seems to be resolved

Definitely not resolved for me..
Adding force fields or changing their parameters don't trigger cache invalidation for rigid bodies.

Changing parameters works for particles and soft bodies, but adding new force fields don't.

Definitely not resolved for me.. Adding force fields or changing their parameters don't trigger cache invalidation for rigid bodies. Changing parameters works for particles and soft bodies, but adding new force fields don't.

If there are still issues make a new report, with all the requested information.

If there are still issues make a new report, with all the requested information.

In #58991#707341, @Sergey wrote:
If there are still issues make a new report, with all the requested information.

There are already a couple merged into this one: #64493 and #59135
and also this one created yesterday: #66105

I was commenting here since @ZedDB seemed to have choosen this as the main task for the issue, I can open a new one if you want so though.

> In #58991#707341, @Sergey wrote: > If there are still issues make a new report, with all the requested information. There are already a couple merged into this one: #64493 and #59135 and also this one created yesterday: #66105 I was commenting here since @ZedDB seemed to have choosen this as the main task for the issue, I can open a new one if you want so though.

If your issue has already an open task there is no need to open a new one. But when a task is not fully resolved for you, or re-appeared, or anything like is totally worth opening a new task.

This helps keeping track of changes and fixes, saves time when we need to look in a history (we can easily get all relevant information from a task, without need to read an entire conversation trying to not miss any crucial detail).

If your issue has already an open task there is no need to open a new one. But when a task is not fully resolved for you, or re-appeared, or anything like is totally worth opening a new task. This helps keeping track of changes and fixes, saves time when we need to look in a history (we can easily get all relevant information from a task, without need to read an entire conversation trying to not miss any crucial detail).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58991
No description provided.