Fix force fields not affecting rigid bodies

This fixes part of T58991.
Still need to add proper relations so that point cache is marked as outdated
when effectors are modified.